2025-04-25T02:01:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14655358683 # 937
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-25
* notice: last 14d: unq all: 11 37
* notice: prev accum: outdated-unq outdated-all / unq all: 1048 5367 / 1059 5403
* notice: next accum: outdated-unq outdated-all / unq all: 1048 5367 / 1060 5404
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-24]

2025-04-24T02:00:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14631807917 # 935
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-24
* notice: last 14d: unq all: 10 36
* notice: prev accum: outdated-unq outdated-all / unq all: 1045 5357 / 1058 5402
* notice: next accum: outdated-unq outdated-all / unq all: 1048 5367 / 1059 5403
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [2025-04-09] / [2025-04-23]

2025-04-23T12:51:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14618607775 # 934
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-23
* notice: last 14d: unq all: 11 43
* notice: prev accum: outdated-unq outdated-all / unq all: 1045 5357 / 1056 5399
* notice: next accum: outdated-unq outdated-all / unq all: 1045 5357 / 1058 5402
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2025-04-23]

2025-04-23T02:00:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/14608316035 # 933