@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-25T02:01:27Z",
+  "timestamp" : "2025-04-25T12:51:22Z",
   "count_outdated" : 5367,
   "uniques_outdated" : 1048,
-  "count" : 5404,
-  "uniques" : 1060,
+  "count" : 5425,
+  "uniques" : 1063,
   "views" : [
     {
       "timestamp": "2025-04-13T00:00:00Z",
@@ -58,6 +58,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-25T00:00:00Z",
+      "count": 21,
+      "count_minmax": [ 21, 21 ],
+      "count_decinc": [ 0, 21 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
