@@ -1,6 +1,6 @@
 {
-  "count": 37,
-  "uniques": 11,
+  "count": 58,
+  "uniques": 14,
   "views": [
     {
       "timestamp": "2025-04-13T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2025-04-24T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-25T00:00:00Z",
+      "count": 21,
+      "uniques": 3
     }
   ]
 }
